# vapsh

./: Makefile  Makefile.am  README.md  configure.ac
inc/: hostapdIF.h  readlineIF.h  vapsh.h
log/: cmd  cmd-output  valgrind-out.txt
src/: hostapdIF.cc  readlineIF.cc  vapsh.cc
